--- a/style.css
+++ b/style.css
@@ -1,3 +1,71 @@
 #root {
   color: red;
+  
+}
+*body{
+  padding: 0;
+}
+.grid-container{
+  
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 2rem;
+  row-gap: 2rem;
+  /* height: 30px; */
+  width: 70vw;
+  margin-left: 2rem;
+  
+}
+select{
+  /* border: 5px solid black; */
+  margin-left: 1rem;
+  height: 1.5rem;
+  
+  
+}
+input{
+  /* border: 5px solid blue; */
+  height: 1.5rem;
+   margin-left: 22rem;
+ 
+}
+pi {
+  /* border: 5px solid black; */
+  margin-left: 2rem;
+  
+  
+  
+}
+
+.grid-item{
+  border: 3px solid lightsalmon;
+  border-radius: 1rem;
+  margin-top: 2rem;
+  background-color: brown;
+  
+
+  
+
+}
+h2{
+  border: 5px solid burlywood;
+  border-radius: 1rem;
+  background-color: beige;
+  font-size: larger;
+  text-align: center;
+  padding: 1rem;
+  margin-top: -0.3rem;
+  
+  
+}
+img{
+  /* margin-top: 4rem; */
+  margin-left: 3rem;
+  
+  
+}
+summary{
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+  color: white;
 }
