update script js and style css

--- a/style.css
+++ b/style.css
@@ -22,25 +22,26 @@
   
 }
 .episo-select{ 
-  /* border: 5px solid black; */
-   margin-left: 2rem; 
+  border: 5px solid black;
+   /* margin-left: 2rem;  */
   height: 2rem;
-  margin-top: 1rem;
+  /* margin-top: -2rem; */
 }
   
 
   
   
 .search-input{
-  /* border: 5px solid blue; */
+  border: 5px solid blue;
   height: 1.5rem;
-  margin-left: 23rem;
-   /* margin-top: -10rem; */
+  /* margin-left: 23rem; */
+   /* margin-top: 2rem; */
  
 }
 episode-count-p {
-  /* border: 5px solid black; */
-  margin-left: 5rem;
+  border: 5px solid black;
+  /* margin-left: 40rem; */
+  /* margin-top: -9rem; */
   
 }
   
