--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 #root {
   color: red;
-  background-color: beige;
-  /* border: 5px solid royalblue; */
+   /* background-color: beige;  */
+   /* border: 5px solid royalblue;  */
   
 }
 
@@ -10,40 +10,44 @@
   padding: 0;
 } */
 
-.grid-container{
+ .grid-container{
   
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   column-gap: 2rem;
   row-gap: 2rem;
-  /* height: 30px; */
+   height: 30px; 
   width: 70vw;
   margin-left: 2rem;
   
-}
-.episo-select{ 
-  /* border: 5px solid black; */
-   margin-left: 2rem; 
-  height: 2rem;
-  margin-top: 1rem;
-}
-  
+} 
+ .episode-select{    
+  border: 5px solid black;  
+  margin-left: 2rem;  
+  height: 2rem; 
+  margin-top: 1rem; 
+ }    
+   
 
   
   
-.search-input{
-  /* border: 5px solid blue; */
-  height: 1.5rem;
-  margin-left: 23rem;
-   margin-top: -2rem;
+  .search-input{  
+   border: 5px solid blue; 
+    height: 1.5rem; 
+   margin-left: 33rem; 
+    /* margin-top: -3rem;  */
  
-}
-.episode-count{
-  /* border: 5px solid black; */
-  margin-left: 38rem;
-  margin-top: -1.3rem;
-  width: 20rem;
+} 
+  .episode-count{  
+   border: 5px solid black; 
+    margin-left: 45rem; 
+   margin-top: -2rem; 
+   width: 20rem; 
   
+}  
+.movie-select{
+  border: 5px solid red;
+  margin-left: 2rem;
 }
   
 .grid-item{
@@ -52,7 +56,7 @@
   margin-top: 2rem;
   background-color: brown;
   
-}
+} 
 
   
 
@@ -67,16 +71,16 @@ h2{
   
   
 }
-img{
-  /* margin-top: 4rem; */
+ img{
+  margin-top: 4rem;
   margin-left: 2rem;
   margin-right: 1rem;
   
   
-}
+}  
 summary{
   margin-left: 1.5rem;
   margin-right: 1.5rem;
   color: white;
 }
-
+ 
